hphp/test/zend/good/ext/pdo/tests/bug47769.php.expectf
this is a protected method.
this is a private method.
foo

Fatal error: Call to protected test::isProtected() from invalid context in %s/bug47769.php on line 21
